--- a/contact-us.html
+++ b/contact-us.html
@@ -188,9 +188,9 @@
                                         </label>
                                         <select>
                                             <option selected> Yhteydenoton Syys</option>
-                                            <option >
+                                            <!-- <option >
                                                 [Valintaruutu vaihtoehdoilla kuten
-                                            </option>
+                                            </option> -->
                                             <option>
                                                 Yleinen Kysymys
                                             </option>
