--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ hotellit
             </div>
             <div class="buttons">
               <button class="button" id="acceptBtn">Hyväksy</button>
-              <button class="button">hylkää</button>
+              <button class="button">Hylkää</button>
             </div>
           </div>
          </div>
