--- a/luxury-accommodations.html
+++ b/luxury-accommodations.html
@@ -545,7 +545,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
         </h3>
         <div class="location">
          <p>
-        <i class="fa-solid fa-location-crosshairs"></i> Rovaniemi, Finland
+        <i class="fa-solid fa-location-crosshairs"></i> Levi, Finland
          </p>
         </div>
         <div class="price">
@@ -553,26 +553,26 @@ ihanteellisen valinnan Helsingissä vieraileville.
            <strong>
             Hinta per yö:
            </strong>
-           €150-€250
+           €200-€350
 
          </p>
         </div>
         <ul>
          <li>
-          Lähellä Santa Claus Villagea
+          Panoraamanäkymät lumiseen maisemaan
          </li>
          <li>
-          Perheystävällinen majoitus ja jännittävä tunnelma
+          Suoraan hiihtohisseille pääsy
          </li>
          <li>
-          Mukautetut palvelut jouluteemalla
+          Modernit mukavuudet talvilomalle
          </li>
         </ul>
         <p class="moretext">
-          Santa's Hotel Santa Claus tarjoaa lämpimän ja kutsuvan majoituksen Rovaniemellä lähellä
-          Santa Claus Villagea. Perheystävällinen hotelli tarjoaa mukavat huoneet ja juhla-ajan
-          tunnelman, mikä tekee siitä erinomaisen valinnan Santa Claus Villagea vieraileville perheille
-          ja kaikille joulun ystäville.
+          Hotel Levi Panorama tarjoaa upeat näkymät lumiseen maisemaan huoneistaan
+          Levi-lomakohteessa. Hotelli tarjoaa suoran pääsyn hiihtohissille ja monenlaisia
+          talviaktiviteetteja. Sen modernit mukavuudet ja upeat maisemat tekevät siitä ihanteellisen
+          talvilomailijoille.
 
         </p>
 
