--- a/luxury-accommodations.html
+++ b/luxury-accommodations.html
@@ -881,7 +881,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
     <!-- Disclaimer section start -->
 
-    <div class="disclaimer-sec ptb-50 text-center" data-aos="fade-up">
+    <div class="disclaimer-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="disclaimer-text">
                 <h4>
