--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
       <div class="container">
         <nav>
           <div class="site-logo" data-aos="fade-right">
-            <a href="index.html">
+            <a href="/">
               <img src="assets/images/logo.png" alt="" >
             </a>
           </div>
           <div class="main-nav" >
             <ul>
               <li>
-                <a href="luxury-accommodations.html"> Luksusmajoituksia </a>
+                <a href="luxury-accommodations"> Luksusmajoituksia </a>
               </li>
               <li>
-                <a href="casino-hotels.html"> Kasinohotellit </a>
+                <a href="casino-hotels"> Kasinohotellit </a>
               </li>
               <li>
-                <a href="city-hotels.html"> Kaupunkihotellit </a>
+                <a href="city-hotels"> Kaupunkihotellit </a>
               </li>
               <li>
-                <a href="scenic-retreats.html"> Luonnonkaunis retriittejä </a>
+                <a href="scenic-retreats"> Luonnonkaunis retriittejä </a>
               </li>
               <li>
-                <a href="traditional-hotels.html"> Perinteiset hotellit </a>
+                <a href="traditional-hotels"> Perinteiset hotellit </a>
               </li>
             </ul>
             <div class="close">
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="link-wrap" >
                 <div class="link-box" style="background-image: url(assets/images/link-card1.jfif); " data-aos="fade-up">
-                    <a href="luxury-accommodations.html">
+                    <a href="luxury-accommodations">
                     <h3>
                         Luksusmajoituk
 sia
@@ -107,21 +107,21 @@ sia
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card2.jpg);" data-aos="fade-up">
-                    <a href="casino-hotels.html">
+                    <a href="casino-hotels">
                     <h3>
                         Kasinohotellit
                     </h3>
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card3.jpg);" data-aos="fade-up">
-                    <a href="city-hotels.html">
+                    <a href="city-hotels">
                     <h3>
                         Kaupunkihotellit
                     </h3>
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card4.jpeg);" data-aos="fade-up">
-                    <a href="scenic-retreats.html">
+                    <a href="scenic-retreats">
                     <h3>
                         Luonnonkaunis
 retriittejä
@@ -129,7 +129,7 @@ retriittejä
                 </a>
                 </div>
                 <div class="link-box" style="background-image: url(assets/images/link-card5.avif);" data-aos="fade-up">
-                    <a href="traditional-hotels.html">
+                    <a href="traditional-hotels">
                     <h3>
                         Perinteiset
 hotellit
@@ -487,7 +487,7 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
             <div class="row">
                <div class="col-lg-4 col-md-6">
                   <div class="footer-logo">
-                      <a href="index.html">
+                      <a href="/">
                         <img src="assets/images/logo.png" alt="">
                       </a>
                   </div>
@@ -529,34 +529,34 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
                   <div class="footer-links">
                     <ul>
                       <li>
-                        <a href="index.html">
+                        <a href="/">
                             Kotisivu
                         </a>
                       </li>
                       <li>
-                        <a href="luxury-accommodations.html">
+                        <a href="luxury-accommodations">
                             Luksusmajoituk
                             sia
                         </a>
                       </li>
                       <li>
-                        <a href="casino-hotels.html">
+                        <a href="casino-hotels">
                             Kasinohotellit
                         </a>
                       </li>
                       <li>
-                        <a href="city-hotels.html">
+                        <a href="city-hotels">
                             Kaupunkihotellit
                         </a>
                       </li>
                       <li>
-                        <a href="scenic-retreats.html">
+                        <a href="scenic-retreats">
                             Luonnonkaunis
                             retriittejä
                         </a>
                       </li>
                       <li>
-                        <a href="traditional-hotels.html">
+                        <a href="traditional-hotels">
                             Perinteiset
 hotellit
                         </a>
@@ -574,18 +574,18 @@ hotellit
                   <ul>
                     
                     <li>
-                      <a href="contact-us.html">
+                      <a href="contact-us">
                         Ota yhteyttä
                       </a>
   
                     </li>
                     <li>
-                      <a href="privacy-policy.html">
+                      <a href="privacy-policy">
                         Tietosuojakäytäntö
                       </a>
                     </li>
                     <li>
-                      <a href="term-and-conditions.html">
+                      <a href="term-and-conditions">
                         Käyttöehdot
                       </a>
                     </li>
