--- a/casino-hotels.html
+++ b/casino-hotels.html
@@ -110,7 +110,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
          <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="https://casinohelsinki.fi/en/helsinki-front-page/" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Casino-Card-1.jpg" alt="">
               </a>
             </div>
@@ -118,7 +118,7 @@
          <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
-                <a href="https://casinohelsinki.fi/en/helsinki-front-page/" target="_blank">
+                <a href="javascript:void(0)">
                     Casino Helsinki
                 </a>
                </h3>
@@ -141,7 +141,7 @@
                   <strong>
                     Hotelli lähellä:
                   </strong>
-               <a href="https://www.scandichotels.com/grandcentralhelsinki?utm_campaign=gmb&utm_source=google&utm_medium=organic&utm_content=grandcentralhelsinki" target="_blank">Scandic Grand Central Helsinki</a>
+               <a href="https://www.expedia.com/Helsinki-Hotels-Scandic-Grand-Central-Helsinki.h59652561.Hotel-Information?chkin=2024-12-25&chkout=2024-12-31&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724332468132&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=1443&destination=Helsinki%2C+Uusimaa%2C+Finland&destType=MARKET&neighborhoodId=178661&selected=59652561&latLong=60.169857%2C24.938379&sort=RECOMMENDED&top_dp=142&top_cur=USD&userIntent=&selectedRoomType=228953465&selectedRatePlan=266367074&searchId=8ad850cc-d643-40a3-aadc-2b0d09331b35&propertyName=Scandic+Grand+Central+Helsinki&clickref=1100lzz5ij3H&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1100lzz5ij3H&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1100lzz5ij3H" target="_blank">Scandic Grand Central Helsinki</a>
 
                 </p>
                </div>
@@ -179,7 +179,7 @@
       <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://casinohelsinki.fi/casino-tampere/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Casino-Card-2.jpg" alt="">
              </a>
            </div>
@@ -187,7 +187,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://casinohelsinki.fi/casino-tampere/" target="_blank">
+               <a href="javascript:void(0)">
                 Casino Tampere
                </a>
               </h3>
@@ -246,7 +246,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://pelaamo.fi/pelaamo/pelaamo-pori-prisma-etelavayla/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Casino-Card-3.jpg" alt="">
              </a>
            </div>
@@ -254,7 +254,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://pelaamo.fi/pelaamo/pelaamo-pori-prisma-etelavayla/" target="_blank">
+               <a href="javascript:void(0)">
                 Casino Pori
                </a>
               </h3>
@@ -277,7 +277,7 @@
                  <strong>
                     Hotelli lähellä:
                  </strong>
-              <a href="https://www.scandichotels.fi/hotellit/suomi/pori/scandic-pori?utm_campaign=gmb&utm_source=google&utm_medium=organic&utm_content=pori" target="_blank">Scandic Pori</a>
+              <a href="https://www.expedia.com/Pori-Hotels-Scandic-Pori.h571572.Hotel-Information?chkin=2024-12-13&chkout=2024-12-20&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724332524190&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=2853&destination=Pori%2C+Pori%2C+Satakunta%2C+Finland&destType=MARKET&selected=571572&latLong=61.48534%2C21.79637&sort=RECOMMENDED&top_dp=120&top_cur=USD&userIntent=&selectedRoomType=202362847&selectedRatePlan=212129690&searchId=a44e9605-7163-4d1a-a90b-d36046d583f8&propertyName=Scandic+Pori&clickref=1101lzEkXWUY&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1101lzEkXWUY&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1101lzEkXWUY" target="_blank">Scandic Pori</a>
 
                </p>
               </div>
@@ -311,7 +311,7 @@
      <div class="luxury-wrap" data-aos="fade-up">
         <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
-             <a href="https://www.casinocity.ax/" target="_blank">
+             <a href="javascript:void(0)">
                <img src="assets/images/Casino-Card-4.jpg" alt="">
              </a>
            </div>
@@ -319,7 +319,7 @@
         <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
-               <a href="https://www.casinocity.ax/" target="_blank">
+               <a href="javascript:void(0)">
                 Casino Åland
                </a>
               </h3>
@@ -342,7 +342,7 @@
                  <strong>
                     Hotelli lähellä:
                  </strong>
-              <a href="https://www.parkalandia.com/sv" target="_blank">Park Alandia Hotell</a>
+              <a href="https://www.expedia.com/Mariehamn-Hotels-Park-Alandia-Hotel.h9288121.Hotel-Information?chkin=2024-11-01&chkout=2024-11-07&flexibility=6_DAY_LOWER&flexibility=7_DAY_UPPER&searchRange=2024-08-01_2024-08-31&searchRange=2024-09-01_2024-09-30&searchRange=2024-10-01_2024-10-31&searchRange=2024-11-01_2024-11-30&searchRange=2024-12-01_2024-12-31&searchRange=2025-01-01_2025-01-31&flexibleSearchRequirement=INCLUDE_WEEKEND&x_pwa=1&rfrr=HSR&pwa_ts=1724333612595&referrerUrl=aHR0cHM6Ly93d3cuZXhwZWRpYS5jb20vSG90ZWwtU2VhcmNo&useRewards=true&rm1=a2&regionId=2294&destination=Mariehamn%2C+Mariehamn%2C+%C3%85land+Islands&destType=MARKET&selected=9288121&latLong=60.097088%2C19.934842&sort=RECOMMENDED&top_dp=121&top_cur=USD&userIntent=&selectedRoomType=201702920&selectedRatePlan=208484850&searchId=56d22999-2818-43ab-9c2f-65e7a006eee1&propertyName=Park+Alandia+Hotel&clickref=1011lzEpYZQm&affcid=US.DIRECT.PHG.1100l364263.0&ref_id=1011lzEpYZQm&my_ad=AFF.US.DIRECT.PHG.1100l364263.0&afflid=1011lzEpYZQm" target="_blank">Park Alandia Hotell</a>
 
                </p>
               </div>
