--- a/luxury-accommodations.html
+++ b/luxury-accommodations.html
@@ -108,8 +108,8 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href=""
-                target="_blank">
+              <a href="javascript:void(0)"
+                >
                 <img src="assets/images/Luxury-Card-1.jpg" alt="">
               </a>
             </div>
@@ -117,8 +117,8 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href=""
-                  target="_blank">
+                <a href="javascript:void(0)"
+                  >
                   Hotel Kämp
                 </a>
               </h3>
@@ -182,7 +182,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-2.jpg" alt="">
               </a>
             </div>
@@ -190,7 +190,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href="" target="_blank">
+                <a href="javascript:void(0)">
                   Helsinki Hotel St. George
                 </a>
               </h3>
@@ -254,8 +254,8 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href=""
-                target="_blank">
+              <a href="javascript:void(0)"
+                >
                 <img src="assets/images/Luxury-Card-3.jpg" alt="">
               </a>
             </div>
@@ -263,8 +263,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href=""
-                  target="_blank">
+                <a href="javascript:void(0)">
                   The Lilla Roberts Hotel
                 </a>
               </h3>
@@ -327,8 +326,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href=""
-                target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-4.jpg" alt="">
               </a>
             </div>
@@ -336,8 +334,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href=""
-                  target="_blank">
+                <a href="javascript:void(0)">
                   Radisson Blu Plaza Hotel
                 </a>
               </h3>
@@ -401,7 +398,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-5.jpg" alt="">
               </a>
             </div>
@@ -409,7 +406,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href="" target="_blank">
+                <a href="javascript:void(0)">
                   Hotel Aurora Village
                 </a>
               </h3>
@@ -471,8 +468,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href=""
-                target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-6.jpg" alt="">
               </a>
             </div>
@@ -480,8 +476,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href=""
-                  target="_blank">
+                <a href="javascript:void(0)">
                   Santa's Hotel Santa Claus
                 </a>
               </h3>
@@ -544,7 +539,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-7.jpg" alt="">
               </a>
             </div>
@@ -552,7 +547,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href="" target="_blank">
+                <a href="javascript:void(0)">
                   Hotel Levi Panorama
                 </a>
               </h3>
@@ -616,7 +611,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href="" target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-8.jpg" alt="">
               </a>
             </div>
@@ -624,7 +619,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href="" target="_blank">
+                <a href="javascript:void(0)">
                   Kakslauttanen Arctic Resort
                 </a>
               </h3>
@@ -684,8 +679,7 @@
         <div class="luxury-wrap" data-aos="fade-up">
           <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
-              <a href=""
-                target="_blank">
+              <a href="javascript:void(0)">
                 <img src="assets/images/Luxury-Card-9.jpg" alt="">
               </a>
             </div>
@@ -693,8 +687,7 @@
           <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
               <h3>
-                <a href=""
-                  target="_blank">
+                <a href="javascript:void(0)">
                   Hotel F6
                 </a>
               </h3>
